--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@
      box-sizing: border-box;
      margin: 0;
      padding: 0;
-     text-align: center;
 }
 
 html {
@@ -121,7 +120,7 @@ main {
 .backgroundImg {
      width: 200px;
      height: 200px;
-     background-image: url("./assets/imgs/bitcoin.svg");
+     background-image: url("./assets/icons/bitcoin.svg");
      margin: 0 auto;
      margin-bottom: 50px;
      background-size: cover;
@@ -344,4 +343,85 @@ main-tables-container::-webkit-scrollbar {
 .table-go-left {
      right: auto;
      left: -40px;
+}
+
+.main-product-detail{
+     position: relative;
+     width: 100%;
+     min-width: 320px;
+     height: auto;
+     padding: 20px 10px;
+     background-color: var(--warm-black);
+}
+
+.product-detail--batata-logo {
+     position: absolute;
+     width: 40px;
+     height: 25px;
+     top: -10px;
+     left: calc(50% - 25px);
+     background-image: url("./assets/icons/batata.svg");
+}
+
+.product-detail--tittle {
+     width: 90%;
+     min-width: 288px;
+     height: auto;
+     margin: 0 auto;
+     margin-top: 50px;
+     text-align: center;
+}
+
+.product-detail--tittle h2 {
+     margin-bottom: 20px;
+     font-size: 2.4rem;
+     font-weight: bold;
+     line-height: 2.6rem;
+     color: var(--just-white);
+}
+
+.product-detail--tittle p{
+     margin-bottom: 20px;
+     font-size: 1.4rem;
+     font-weight: 500;
+     line-height: 1.8rem;
+     color: #808080;
+}
+
+.product-detail--card {
+     width: 90%;
+     min-width: 288px;
+     max-width: 400px;
+     height: 150px;
+     margin: 15px auto;
+     padding: 15px;
+     background-color: var(--black);
+     border-radius: 5px;
+     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+
+.product-detail--card .clock {
+     display: inline-block;
+     width: 20px;
+     height: 20px;
+     margin-bottom: 10px;
+     background-image: url("./assets/icons/clock.svg");
+     background-size: cover;
+     background-position: center;
+     background-repeat: no-repeat;
+}
+
+.product--card-title {
+     margin-bottom: 15px;
+     font-size: 1.8rem;
+     font-weight: bold;
+     line-height: 1.8rem;
+     color: var(--just-white);
+}
+
+.product--card-body {
+     font-size: 1.4rem;
+     font-weight: 500;
+     line-height: 1.8rem;
+     color: #808080;
 }
