--- a/styles.css
+++ b/styles.css
@@ -392,7 +392,7 @@ main-tables-container::-webkit-scrollbar {
      width: 90%;
      min-width: 288px;
      max-width: 400px;
-     height: 150px;
+     min-height: 150px;
      margin: 15px auto;
      padding: 15px;
      background-color: var(--black);
@@ -400,15 +400,30 @@ main-tables-container::-webkit-scrollbar {
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
 }
 
-.product-detail--card .clock {
+.product-detail--card-icon {
      display: inline-block;
      width: 20px;
      height: 20px;
      margin-bottom: 10px;
-     background-image: url("./assets/icons/clock.svg");
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
+}
+
+.clock {
+     background-image: url("./assets/icons/clock.svg");
+}
+
+.eye {
+     background-image: url("./assets/icons/eye.svg");
+}
+
+.dolar {
+     background-image: url("./assets/icons/dollar-sign.svg");
+}
+
+.check {
+     background-image: url("./assets/icons/check-circle.svg");
 }
 
 .product--card-title {
@@ -424,4 +439,23 @@ main-tables-container::-webkit-scrollbar {
      font-weight: 500;
      line-height: 1.8rem;
      color: #808080;
+}
+
+.bitcoin-img-container {
+     width: 100%;
+     min-width: 320px;
+     height: 50vh;
+     background-image: url("./assets/imgs/bitcoinbaby2x.jpg");
+     background-position: center;
+     background-size: cover;
+     background-repeat: no-repeat;
+     text-align: center;
+}
+
+.bitcoin-img-container h2 {
+     padding-top: 60px;
+     font-size: 2.4rem;
+     font-weight: bold;
+     line-height: 2.6rem;
+     color: var(--just-white);
 }
